change junit5 to junit4