@@ -1,27 +1,37 @@
 package com.practise.primary;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.assertEquals;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collection;
 
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
+import org.junit.runners.Parameterized.Parameters;
 
-class GuessNumberHigherORLowerTest {
+@RunWith(value = Parameterized.class)
+public class GuessNumberHigherORLowerTest {
 
-	@ParameterizedTest
-	@MethodSource
-	void testGuessNumber(int n, int result) {
+	@Parameterized.Parameter(value = 0)
+	public int n;
+	
+	@Parameterized.Parameter(value = 1)
+	public int result;
+	
+	@Test
+	public void testGuessNumber() {
 		GuessNumberHigherORLower guessNumberHigherORLower = new GuessNumberHigherORLower(result);
 		assertEquals(guessNumberHigherORLower.guessNumber(n), result);
 	}
 	
-	static List<Arguments> testGuessNumber() {
-		return List.of(
-				Arguments.of(10, 6), 
-				Arguments.of(1, 1), 
-				Arguments.of(2, 1));
+	@Parameters
+	public static Collection<Object[]> data() {
+		return Arrays.asList(new Object[][] {
+				{10, 6}, 
+				{1, 1},
+				{2, 1}
+		});
 	}
 
 }
