@@ -1,33 +1,43 @@
 package com.practise.primary;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.assertEquals;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collection;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.Before;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
+import org.junit.runners.Parameterized.Parameters;
 
-class MajorityElementTest {
+@RunWith(value = Parameterized.class)
+public class MajorityElementTest {
 	
 	private MajorityElement majorityElement;
 
-	@BeforeEach
-	void setUp() throws Exception {
+	@Before
+	public void setUp() throws Exception {
 		majorityElement = new MajorityElement();
 	}
+	
+	@Parameterized.Parameter(value = 0)
+	public int[] nums;
+	
+	@Parameterized.Parameter(value = 1)
+	public int result;
 
-	@ParameterizedTest
-	@MethodSource
-	void testFindMajorityElement(int[] nums, int result) {
+	@Test
+	public void testFindMajorityElement() {
 		assertEquals(majorityElement.find(nums), result);
 	}
 	
-	static List<Arguments> testFindMajorityElement() {
-		return List.of(
-				Arguments.of(new int[] {3,2,3}, 3), 
-				Arguments.of(new int[] {2,2,1,1,1,2,2}, 2));
+	@Parameters
+	public static Collection<Object[]> data() {
+		return Arrays.asList(new Object[][] {
+				{new int[] {3,2,3}, 3}, 
+				{new int[] {2,2,1,1,1,2,2}, 2}
+		});
 	}
 
 }
