@@ -1,34 +1,44 @@
 package com.practise.primary;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.assertArrayEquals;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collection;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.Before;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
+import org.junit.runners.Parameterized.Parameters;
 
-class PlusOneTest {
+@RunWith(value = Parameterized.class)
+public class PlusOneTest {
 	
 	private PlusOne plusOne;
 
-	@BeforeEach
-	void setUp() throws Exception {
+	@Before
+	public void setUp() throws Exception {
 		plusOne = new PlusOne();
 	}
+	
+	@Parameterized.Parameter(value = 0)
+	public int[] digits;
+	
+	@Parameterized.Parameter(value = 1)
+	public int[] result;
 
-	@ParameterizedTest
-	@MethodSource
-	void testPlusOne(int[] digits, int[] result) {
+	@Test
+	public void testPlusOne() {
 		assertArrayEquals(plusOne.execute(digits), result);
 	}
 	
-	static List<Arguments> testPlusOne() {
-		return List.of(
-				Arguments.of(new int[] {1,2,3}, new int[] {1,2,4}), 
-				Arguments.of(new int[] {4,3,2,1}, new int[] {4,3,2,2}), 
-				Arguments.of(new int[] {9}, new int[] {1,0}));
+	@Parameters
+	public static Collection<Object[]> data() {
+		return Arrays.asList(new Object[][] {
+				{new int[] {1,2,3}, new int[] {1,2,4}}, 
+				{new int[] {4,3,2,1}, new int[] {4,3,2,2}}, 
+				{new int[] {9}, new int[] {1,0}}
+		});
 	}
 
 }
