@@ -1,34 +1,44 @@
 package com.practise.primary;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.assertEquals;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collection;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.Before;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
+import org.junit.runners.Parameterized.Parameters;
 
-class ValidParenthesesTest {
+@RunWith(value = Parameterized.class)
+public class ValidParenthesesTest {
 	
 	private ValidParentheses validParentheses;
 
-	@BeforeEach
-	void setUp() throws Exception {
+	@Before
+	public void setUp() throws Exception {
 		validParentheses = new ValidParentheses();
 	}
+	
+	@Parameterized.Parameter(value = 0)
+	public String s;
+	
+	@Parameterized.Parameter(value = 1)
+	public boolean result;
 
-	@ParameterizedTest
-	@MethodSource
-	void testValidParentheses(String s, boolean result) {
+	@Test
+	public void testValidParentheses() {
 		assertEquals(validParentheses.execute(s), result);
 	}
 	
-	static List<Arguments> testValidParentheses() {
-		return List.of(
-				Arguments.of("()", true), 
-				Arguments.of("()[]{}", true), 
-				Arguments.of("(]", false));
+	@Parameters
+	public static Collection<Object[]> data() {
+		return Arrays.asList(new Object[][] {
+				{"()", true},
+				{"()[]{}", true},
+				{"(]", false}
+		});
 	}
 
 }
