@@ -1,34 +1,47 @@
 package com.practise.primary;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.assertEquals;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collection;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.Before;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
+import org.junit.runners.Parameterized.Parameters;
 
-class WordPatternTest {
+@RunWith(value = Parameterized.class)
+public class WordPatternTest {
 	
 	private WordPattern wordPattern;
 
-	@BeforeEach
-	void setUp() throws Exception {
+	@Before
+	public void setUp() throws Exception {
 		wordPattern = new WordPattern();
 	}
+	
+	@Parameterized.Parameter(value = 0)
+	public String pattern;
+	
+	@Parameterized.Parameter(value = 1)
+	public String s;
+	
+	@Parameterized.Parameter(value = 2)
+	public boolean result;
 
-	@ParameterizedTest
-	@MethodSource
-	void testWordPattern(String pattern, String s, boolean result) {
+	@Test
+	public void testWordPattern() {
 		assertEquals(wordPattern.execute(pattern, s), result);
 	}
 	
-	static List<Arguments> testWordPattern() {
-		return List.of(
-				Arguments.of("abba", "dog cat cat dog", true), 
-				Arguments.of("abba", "dog cat cat fish", false), 
-				Arguments.of("aaaa", "dog cat cat dog", false));
+	@Parameters
+	public static Collection<Object[]> data() {
+		return Arrays.asList(new Object[][] {
+				{"abba", "dog cat cat dog", true}, 
+				{"abba", "dog cat cat fish", false}, 
+				{"aaaa", "dog cat cat dog", false}
+		});
 	}
 
 }
